--- a/styles.css
+++ b/styles.css
@@ -237,8 +237,8 @@ button {
 
 /* Tooltip styling */
 .tooltip-container {
-  position: absolute;
-  
+  position: fixed;
+  z-index: -2;
   top: 0;
   left: 0;
 }
